fix(pf4): replace react-select with downshift

--- a/packages/pf4-component-mapper/src/common/select/select-styles.scss
+++ b/packages/pf4-component-mapper/src/common/select/select-styles.scss
@@ -67,124 +67,8 @@
 * z-index of menu has to be > 400 to show over pf4-modal
 */
 
-.ddorg__pf4-component-mapper__select__menu {
-  cursor: pointer;
-  border-radius: 0 !important;
-  z-index: 1000 !important;
-}
-
-.ddorg__pf4-component-mapper__select__menu--option {
+.ddorg__pf4-component-mapper__select-toggle-wrapper {
+  flex: 1;
   display: flex;
-  align-items: center;
-  color: var(--pf-global--Color--dark-100);
-
-   &.focused {
-      background-color: var(--pf-global--Color--light-200);
-  }
-
-   svg {
-      width: 0.6em;
-      margin-right: 10px;
-      fill: var(--pf-global--active-color--100);
-  }
-
-   div.pf-c-check {
-      padding-left: 1rem;
-      & + .ddorg__pf4-component-mapper__select__option {
-          padding-left: 0;
-      }
-  }
-
-  &.disabled {
-    cursor: default;
-  }
-
-  &.disabled div {
-    color: var(--pf-global--disabled-color--100);
-    pointer-events: none;
-    cursor: none;
-  }
-}
-
-.ddorg__pf4-component-mapper__select__menu--option div {
-  background: transparent;
-  cursor: pointer;
-  color: var(--pf-global--Color--300);
-}
-
-.ddorg__pf4-component-mapper__select__single-value {
-padding-left: 8px;
-}
-
-.ddorg__pf4-component-mapper__select__multivalue--container {
-display: flex;
-flex-direction: row;
-flex-wrap: nowrap;
-align-items: center;
-box-sizing: border-box;
-line-height: 24px;
-position: relative;
-margin-right: 4px;
-font-size: 12px;
-max-height: 26px;
-
-> .ddorg__pf4-component-mapper__select__multivalue--remove {
-  display: flex;
-
-  svg {
-    fill: var(--pf-global--Color--400);
-  }
-
-  > :hover {
-    background: transparent;
-    svg {
-        fill: var(--pf-global--Color--dark-100);
-    }
-  }
-}
-
-&::before {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  content: "";
-  border: var(--pf-global--BorderWidth--sm) solid var(--pf-global--Color--dark-200);
-  border-radius: 3px;
-  pointer-events: none;
-}
-}
-
-.ddorg__pf4-component-mapper__select__value--container {
-  display: flex;
-  padding-left: 8px;
-  align-items: center;
-  flex-wrap: wrap;
-  max-width: calc(100% - 70px);
-
-   .ddorg__pf4-component-mapper__select__multivalue--container {
-      align-items: initial;
-      .ddorg__pf4-component-mapper__select__multi-value__label {
-        max-width: 240px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: inline-block;
-      }
-  }
-
-   .ddorg__pf4-component-mapper__select__value--container-chipgroup {
-      padding: 4px 6px;
-      font-size: 12px;
-      background-color: var(--pf-global--BorderColor--300);
-      border: var(--pf-global--BorderWidth--sm) solid var(--pf-global--BorderColor--300);
-      margin: 0;
-      max-height: 26px;
-          &:hover{
-              border-color: var(--pf-global--Color--dark-100);
-          }
-          > span {
-              color: var(--pf-global--Color--dark-100);
-          }
-      }
+  justify-content: flex-start;
 }
